# tryplayer

./: .project  CMakeLists.txt  README  mingw-toolchain.cmake  tryplayer.kdev4
.kdev4/: tryplayer.kdev4
Modules/: FindFFMPEG.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: main.cpp  mainFltk.cpp  remuxing.c  rtsp-envelope.cpp  tryplayer.cpp  tryplayer.h  tryplayer.ui  utils.cpp
